--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "build": "npm build"
+    "build": "npm run build"
   }
   ,
   "keywords": [
